=======
CHANGES
=======

0.4 (unreleased)
================

- Allow parallel execution of the individual test runners by stating
  'max_jobs=X' in the recipe's options.

0.3 (2009-01-28)
================

- Adding the exclude parameter in buildout causes the default exclude
  list to be merged with the option in buildout.cfg.

0.2 (2009-01-28)
================

- Implemented use_svn option to use SVN trunk checkouts instead of released
  versions.

0.1 (2009-01-28)
================

- first released version