@@ -10,10 +10,8 @@ eggs = z3c.recipe.compattest[test]
 [compattest]
 recipe = z3c.recipe.compattest
 include = z3c.recipe.compattest
-exclude = zope.container
 
 [compattest-trunk]
 recipe = z3c.recipe.compattest
 include = zope.dottedname
 use_svn = true
-exclude = zope.container
